--- a/balloonpopup_library/src/main/res/values/style.xml
+++ b/balloonpopup_library/src/main/res/values/style.xml
@@ -8,4 +8,12 @@
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
+
+    <style name="instantin_scaleout" parent="android:Animation">
+        <item name="android:windowExitAnimation">@anim/scale_out</item>
+    </style>
+
+    <style name="instantin_fadeout" parent="android:Animation">
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
 </resources>
