--- a/balloonpopup_library/src/main/res/values/style.xml
+++ b/balloonpopup_library/src/main/res/values/style.xml
@@ -9,11 +9,20 @@
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
+    <style name="fade_and_scale" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/fade_and_scale_in</item>
+        <item name="android:windowExitAnimation">@anim/fade_and_scale_out</item>
+    </style>
+
     <style name="instantin_scaleout" parent="android:Animation">
         <item name="android:windowExitAnimation">@anim/scale_out</item>
     </style>
 
     <style name="instantin_fadeout" parent="android:Animation">
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+
+    <style name="instantin_fade_and_scaleout" parent="android:Animation">
+        <item name="android:windowExitAnimation">@anim/fade_and_scale_out</item>
     </style>
 </resources>
