--- a/balloonpopup_sample/src/main/res/layout/activity_sample.xml
+++ b/balloonpopup_sample/src/main/res/layout/activity_sample.xml
@@ -25,7 +25,7 @@
         android:id="@+id/button_gravity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CENTER"
+        android:text="Gravity: CENTER"
         android:layout_toRightOf="@id/button"
         />
 
